// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix.frontgate;

option go_package = "openpitrix.io/openpitrix/pkg/pb/frontgate;pbfrontgate";

import "openpitrix/types/types.proto";
import "openpitrix/types/etcd.proto";
import "openpitrix/types/confd.proto";
import "openpitrix/types/drone.proto";
import "openpitrix/types/frontgate.proto";
import "openpitrix/types/pilot.proto";
import "openpitrix/types/task.proto";

message Config {
	string id = 1;
	int32 listen_port = 2;

	string pilot_host = 3;
	int32 pilot_port = 4;

	openpitrix.types.FrontgateEndpoint node_list = 5;
	openpitrix.types.EtcdConfig etcd_config = 6;
	openpitrix.types.ConfdConfig confd_config = 7;
}

service FrontgateService {
	rpc GetPilotConfig (openpitrix.types.Empty) returns (openpitrix.types.PilotConfig);

	rpc GetFrontgateConfig (openpitrix.types.Empty) returns (openpitrix.types.FrontgateConfig);
	rpc SetFrontgateConfig (openpitrix.types.FrontgateConfig) returns (openpitrix.types.Empty);

	rpc GetDroneList (openpitrix.types.Empty) returns (openpitrix.types.DroneIdList);
	rpc GetDroneConfig (openpitrix.types.DroneEndpoint) returns (openpitrix.types.DroneConfig);
	rpc SetDroneConfig (openpitrix.types.SetDroneConfigRequest) returns (openpitrix.types.Empty);

	rpc GetConfdConfig (openpitrix.types.ConfdEndpoint) returns (openpitrix.types.ConfdConfig);
	rpc SetConfdConfig (openpitrix.types.SetConfdConfigRequest) returns (openpitrix.types.Empty);

	rpc IsConfdRunning (openpitrix.types.ConfdEndpoint) returns (openpitrix.types.Bool);
	rpc StartConfd (openpitrix.types.ConfdEndpoint) returns (openpitrix.types.Empty);
	rpc StopConfd (openpitrix.types.ConfdEndpoint) returns (openpitrix.types.Empty);

	rpc RegisterMetadata (openpitrix.types.SubTask_RegisterMetadata) returns (openpitrix.types.Empty);
	rpc DeregisterMetadata (openpitrix.types.SubTask_DeregisterMetadata) returns (openpitrix.types.Empty);

	rpc RegisterCmd (openpitrix.types.SubTask_RegisterCmd) returns (openpitrix.types.Empty);
	rpc DeregisterCmd (openpitrix.types.SubTask_DeregisterCmd) returns (openpitrix.types.Empty);

	rpc ReportSubTaskStatus (openpitrix.types.SubTaskStatus) returns (openpitrix.types.Empty);

	rpc GetEtcdValuesByPrefix (openpitrix.types.String) returns (openpitrix.types.StringMap);
	rpc GetEtcdValues (openpitrix.types.StringList) returns (openpitrix.types.StringMap);
	rpc SetEtcdValues (openpitrix.types.StringMap) returns (openpitrix.types.Empty);

	rpc PingPilot (openpitrix.types.Empty) returns (openpitrix.types.Empty);
	rpc PingFrontgate (openpitrix.types.Empty) returns (openpitrix.types.Empty);
	rpc PingDrone (openpitrix.types.DroneEndpoint) returns (openpitrix.types.Empty);

	rpc HeartBeat(openpitrix.types.Empty) returns (openpitrix.types.Empty);
}
